# sellerops-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MVP-build-plan.md  PRD-v0.1.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  config.py  db.py  logging_config.py  main.py  middleware.py  models.py  repositories.py  schemas.py  server.py  time_utils.py
app/api/routers/: __init__.py  core.py
app/api/services/: cases.py  connectors.py  csv_import.py  evals.py  openai_triage.py  policies.py  triage.py  triage_registry.py
app/api/services/connectors/: __init__.py  github.py  slack.py  stripe_refunds.py
app/web/: app.js  index.html  styles.css
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_phase1_operational_state.py  0003_review_edit_events.py  0004_action_result_details.py
samples/saas-support/: github_issues.csv  support_tickets.csv
samples/seller-support/: customer_messages.csv  refund_requests.csv
tests/: conftest.py  test_api_flow.py  test_database_config.py  test_evals.py  test_github_connector.py  test_policies.py  test_request_context.py  test_slack_connector.py  test_stripe_connector.py  test_triage_failure_state.py  test_triage_provider.py
