[project]
name = "sellerops-agent"
version = "0.1.0"
description = "Governed AI operations workspace for support, risk triage, and review workflows."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=2.0.0",
  "pydantic-settings>=2.7.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.22",
  "stripe>=12.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
